--- a/src/templates/examples.html
+++ b/src/templates/examples.html
@@ -21,9 +21,9 @@
 <section class="section container-fluid">
     <div class="row">
         <h2>Dashboard 2</h2>        
-        <div class="item col-xs-6" ng-repeat="photo in photos">
+        <div class="item col-xs-3" ng-repeat="photo in photos">
             <a href="#/photos/{{$index}}">
-            <img class="img-responsive" ng-src="{{ photo.url }}" width="60">
+            <img class="img-responsive center-block" ng-src="{{ photo.url }}" width="60">
             <p class="author">{{ photo.author }}</p>
             </a>
         </div>
