--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -2,9 +2,9 @@
   <!--<h1 class="page-header">Bem-vindo CGI App</h1>-->
   <h2>Dashboard</h2>
     <div class="row">
-        <div class="item col-md-4" ng-repeat="photo in photos">
+        <div class="item col-md-4 center-block" ng-repeat="photo in photos">
             <a href="#/photos/{{$index}}">
-            <img class="img-responsive" ng-src="{{ photo.url }}" width="100">
+            <img class="img-responsive center-block" ng-src="{{ photo.url }}" width="100">
             <p class="author">{{ photo.author }}</p>
             </a>
         </div>
