--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -5,7 +5,7 @@
   <div class="scrollable-content">
     <div class="list-group" ui-turn-off='uiSidebarLeft'>
       <a class="list-group-item" href="#/">Home <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="#examples">Dashboard <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" href="#examples/" ng-class="(item.id == $index) ? 'list-group-item active' : ''">Dashboard <i class="fa fa-chevron-right pull-right"></i></a>
     </div>
   </div>
 </div>
