--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -1,11 +1,23 @@
 <h1 class="app-name">CGI App</h1>
 
-<div class="scrollable">
+<!--<div class="scrollable">
   <h1 class="scrollable-header app-name">CGI App</h1>  
   <div class="scrollable-content">
     <div class="list-group" ui-turn-off='uiSidebarLeft'>
-      <a class="list-group-item" href="#/">Home <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="#examples/" ng-class="(item.id == $index) ? 'list-group-item active' : ''">Dashboard <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" href="#/" ng-class="{'active': nav.isActive('/')}">Home <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" href="#examples/" ng-class="{'active': nav.isActive('examples')}">Dashboard <i class="fa fa-chevron-right pull-right"></i></a>
+    </div>
+  </div>
+</div>-->
+
+<div class="scrollable">
+  <h1 class="scrollable-header app-name">CGI App</h1>  
+  <div class="scrollable-content">
+    <div class="list-group">
+        <ul class="nav navbar-nav">
+            <li ng-class="{'active': nav.isActive('/')}"><a class="list-group-item" href="#/" ng-click="nav.select('/')">Home <i class="fa fa-chevron-right pull-right"></i></a></li>
+            <li ng-class="{'active': nav.isActive('examples')}"><a class="list-group-item" href="#examples/" ng-click="nav.select('examples')">Dashboard <i class="fa fa-chevron-right pull-right"></i></a></li>
+        </ul>
     </div>
   </div>
 </div>
